--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.TheCocktail1"
         tools:targetApi="31">
         <activity
+            android:name=".cocktailrandom"
+            android:exported="false" />
+        <activity
+            android:name=".ordinaryDrink"
+            android:exported="false" />
+        <activity
             android:name=".Cocktail"
             android:exported="false" />
         <activity
